added fixes for margins and smoothed out the scroll snapping

--- a/photography.html
+++ b/photography.html
@@ -9,100 +9,101 @@
         <link rel="stylesheet" href="css/glightbox.min.css">
     </head>
     <body>
-        <header id="site-header">
-            <nav class="header-nav">
-                <h1 class="h-nav"><a href="index.html">Yannick Schulz</a></h1>
-                <ul class="nav-menu">
-                    <li class="nav-item"><a href="about.html">About</a></li>
-                    <li class="nav-item"><a href="photography.html">Photography</a></li>
-                    <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
-                </ul>
-            </nav>
-        </header>            
-        <div class="coverphoto">
-            <div class="coverphoto-photo">
+        <div class="scroll-section header-offset">
+            <header id="site-header">
+                <nav class="header-nav">
+                    <h1 class="h-nav"><a href="index.html">Yannick Schulz</a></h1>
+                    <ul class="nav-menu">
+                        <li class="nav-item"><a href="about.html">About</a></li>
+                        <li class="nav-item"><a href="photography.html">Photography</a></li>
+                        <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="coverphoto">
                 <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-photography-cover.jpg" alt="coverphoto silhouette holding a camera">
             </div>
-        </div>
-        <main class ="gallery-page">
-            <div class="textbox">
-                <h2>Staging</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
+            <main class ="gallery-page">
+                <div class="textbox">
+                    <h2>Staging</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
+                </div>
+                <section class="gallery-container">
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-siblings.jpg" class="glightbox">
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-siblings.jpg" alt="motorcycle" class="gallery-img">
+                        </a>
+                    </div>
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage1.jpg" class="glightbox">
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage1.jpg" alt="motorcycle" class="gallery-img">
+                        </a>
+                    </div>
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage2.jpg" class="glightbox">
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage2.jpg" alt="motorcycle" class="gallery-img">
+                        </a>
+                    </div>
+                </section>
             </div>
-            <section class="gallery-container">
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-siblings.jpg" class="glightbox">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-siblings.jpg" alt="motorcycle" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage1.jpg" class="glightbox">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage1.jpg" alt="motorcycle" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage2.jpg" class="glightbox">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage2.jpg" alt="motorcycle" class="gallery-img">
-                    </a>
-                </div>
-            </section>
-            <section class="scroll-section">
-                <div class="textbox">
-                    <h2>Motorcycles</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
-                </div>
-                <section class="gallery-container">
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" class="glightbox">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" alt="motorcycle" class="gallery-img">
-                        </a>
+                <section class="scroll-section">
+                    <div class="textbox header-offset">
+                        <h2>Motorcycles</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
                     </div>
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike2.jpg" class="glightbox">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike2.jpg" alt="motorcycle" class="gallery-img">
-                        </a>
-                    </div>
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg" class="glightbox">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg" alt="motorcycle" class="gallery-img">
-                        </a>
-                    </div>
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike4.jpg" class="glightbox"> 
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike4.jpg" alt="motorcycle" class="gallery-img">
-                        </a>
-                    </div>
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike5.jpg" class="glightbox">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike5.jpg" alt="motorcycle" class="gallery-img">
-                        </a>
-                    </div>
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike6.jpg" class="glightbox">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike6.jpg" alt="motorcycle" class="gallery-img">
-                        </a>
-                    </div>
+                    <section class="gallery-container">
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike2.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike2.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike4.jpg" class="glightbox"> 
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike4.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike5.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike5.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike6.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike6.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                    </section>
                 </section>
-            </section>
-            <section class="scroll-section">
-                <div class="textbox">
-                    <h2>Product Photography</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
-                </div>
-                <section class="gallery-container">
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel11.jpg" class="glightbox">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel11.jpg" alt="motorcycle" class="gallery-img">
-                        </a>
+                <section class="scroll-section">
+                    <div class="textbox header-offset">
+                        <h2>Product Photography</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
                     </div>
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" class="glightbox">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" alt="motorcycle" class="gallery-img">
-                        </a>
-                    </div>
+                    <section class="gallery-container">
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel11.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel11.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                    </section>
                 </section>
-            </section>
-        </main>
+            </main>
+        
         <script src="js/glightbox.min.js"></script>
         <script type="text/javascript">
              const lightbox = GLightbox({ loop: true });
