added text and applied template upodates on the other pages

--- a/photography.html
+++ b/photography.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/glightbox.min.css">
     </head>
     <body>
-        <div class="scroll-section header-offset">
+        <div class="header-offset">
             <header id="site-header">
                 <nav class="header-nav">
                     <h1 class="h-nav"><a href="index.html">Yannick Schulz</a></h1>
@@ -23,33 +23,43 @@
             <div class="coverphoto">
                 <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-photography-cover.jpg" alt="coverphoto silhouette holding a camera">
             </div>
-            <main class ="gallery-page">
-                <div class="textbox">
-                    <h2>Staging</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
+            <main class ="gallery-page content-color page-heading">
+                <div class="first-element">
+                    <div class="textbox">
+                        <h1>Photography</h1>
+                        <h2>Staging</h2>
+                        <p>
+                            What I probably enjoy most in photography is to bring a certain idea and inspiration to the silver bromide, or ones and zeros for that fact.
+                            Conceptualizing lighting with color, direction and diffusivity in a scene and planning editing decisions confront me with unique challenges, spark my problem solving attitude and can often lead to a learning experience in the process.
+                            Besides that, I am a huge fan of storytelling, which I always try to bring aspects of to a photography project through symbolysm, ambience or simple gestures and expressions.
+                        </p>
+                    </div>
+                    <section class="gallery-container">
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-siblings.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-siblings.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage1.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage1.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage2.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage2.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                    </section>
                 </div>
-                <section class="gallery-container">
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-siblings.jpg" class="glightbox">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-siblings.jpg" alt="motorcycle" class="gallery-img">
-                        </a>
-                    </div>
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage1.jpg" class="glightbox">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage1.jpg" alt="motorcycle" class="gallery-img">
-                        </a>
-                    </div>
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage2.jpg" class="glightbox">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage2.jpg" alt="motorcycle" class="gallery-img">
-                        </a>
-                    </div>
-                </section>
-            </div>
                 <section class="scroll-section">
                     <div class="textbox header-offset">
                         <h2>Motorcycles</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
+                        <p>
+                            Being an engineer at heart, it is fair to say that I have an affection to things. This goes from clockworks, intricate movements, complications and contraptions.
+                            Exposed assemblies of any kind are just a thing of beauty to me, which is probably a reason why a visit to the hadron collider is still high up on my bucket list.
+                            Much more accessible, and therefore my favorite subject in photography, are naked bikes, despite the lack of a license to drive one myself.
+                        </p>
                     </div>
                     <section class="gallery-container">
                         <div class="gallery-item">
@@ -87,7 +97,12 @@
                 <section class="scroll-section">
                     <div class="textbox header-offset">
                         <h2>Product Photography</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
+                        <p>
+                            When I decided to have a skalpel engraved for the medical doctorate of my sister, I was asked for a photo of the finished piece by the company for their instagram profile. 
+                            Apparently, this was a very unique request and they would love to display it. 
+                            Since I was always intrigued by the perfectionism and attention to detail in product photography, I took this opportunity to try myself.
+                            With a makeshift light box of a turned over table and white bed linen I learned the difficulty of capturing shiny metal surfaces the way you want.
+                        </p>
                     </div>
                     <section class="gallery-container">
                         <div class="gallery-item">
@@ -103,7 +118,7 @@
                     </section>
                 </section>
             </main>
-        
+        </div>
         <script src="js/glightbox.min.js"></script>
         <script type="text/javascript">
              const lightbox = GLightbox({ loop: true });
