--- a/about.html
+++ b/about.html
@@ -4,36 +4,52 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Photography</title>
+        <title>About</title>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/glightbox.min.css">
     </head>
     <body>
-        <header id="site-header">
-            <nav class="header-nav">
-                <h1 class="h-nav"><a href="index.html">Yannick Schulz</a></h1>
-                <ul class="nav-menu">
-                    <li class="nav-item"><a href="about.html">About</a></li>
-                    <li class="nav-item"><a href="photography.html">Photography</a></li>
-                    <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
-                </ul>
-            </nav>
-        </header>            
-        <div class="coverphoto">
-            <div class="coverphoto-photo">
-                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-photography-cover.jpg" alt="coverphoto silhouette holding a camera">
+        <div class="header-offset">
+            <header id="site-header">
+                <nav class="header-nav">
+                    <h1 class="h-nav"><a href="index.html">Yannick Schulz</a></h1>
+                    <ul class="nav-menu">
+                        <li class="nav-item"><a href="about.html">About</a></li>
+                        <li class="nav-item"><a href="photography.html">Photography</a></li>
+                        <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
+                    </ul>
+                </nav>
+            </header>            
+            <div class="coverphoto">
+                <img src="img/about/yannick-schulz-excavator-lake.jpg" alt="coverphoto silhouette holding a camera">
             </div>
-        </div>
 
-        <main class="about-page">
-            <section class="about-text">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet ea debitis fuga ipsam repudiandae laboriosam. At consequatur id illum deleniti officiis repellat repudiandae porro nemo voluptate numquam ea, mollitia saepe quam, architecto dolor eligendi similique sed nam! Itaque quae quaerat doloribus voluptas necessitatibus iusto hic vero repudiandae aspernatur praesentium vitae suscipit, quam error quidem veritatis sit laudantium? Similique, unde! Odio maxime beatae, rem, vel vero ullam ipsa praesentium necessitatibus deserunt magni possimus qui porro voluptatem quas? Quas reiciendis ipsam natus eos explicabo rem maiores, fugiat deleniti quam adipisci iure incidunt, animi repellat similique ipsum. Ab, vitae maxime distinctio aspernatur autem ut commodi consequatur, minima provident et quos molestiae quisquam ducimus adipisci. Molestiae ipsam nemo perferendis assumenda repudiandae, impedit culpa vel tempora harum consequuntur eligendi odio quia quod optio itaque similique totam veniam ullam, ab perspiciatis inventore reiciendis explicabo ducimus architecto. Minima accusamus possimus fuga. Blanditiis, dolor, temporibus aspernatur, vitae ut eos dicta nisi rerum atque fuga quidem ab libero voluptatum! Delectus voluptatibus laborum earum reiciendis blanditiis recusandae ipsum sit rerum possimus, praesentium esse officiis placeat quasi alias nesciunt fuga maiores hic? Nisi, rerum vel ipsum dolorum illum eos praesentium obcaecati quae inventore velit beatae officia aliquam, excepturi enim pariatur provident a officiis? Esse aperiam, tempore placeat eaque sint animi dolorum debitis minima doloremque corrupti tenetur nesciunt, beatae, impedit sed voluptatum inventore laborum. Impedit quasi iste consectetur minus maxime nemo consequuntur qui veniam vitae delectus, at quos quo sapiente id inventore nulla quia ducimus voluptates repellat doloremque perspiciatis numquam expedita magnam!
-                </p>
-            </section>
-            <section class="about-image">
-                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-photography-cover.jpg" alt="author of the page">
-            </section>
-        </main>
+            <main class="about-page content-color page-heading">
+                <section class="about-text">
+                    <h1>
+                        About
+                    </h1>
+                    <p>
+                        Hello world! This is Yannick :)
+                    </p>
+                    <p>
+                        Engineer, developer, german angliophile, hobbyist and simply a creative person. 
+                        I love to indulge myself in creative work to balance the analytical load that goes hand in hand with my profession.
+                        Engineering has helped me honing my skills in this area of crafts and I certainly believe the creativity has done the same to my problem solving skills. 
+                        And although web 2.0 (or 3.0) offers great ways to express yourself I have never been a fan of the social media aspects that come with them.
+                        Hence, my own website had to become reality.
+                        I want to share, but mostly archive projects, learnings and ideas in a convenient way that suits them and myself.
+                        And while doing so, trying myself at some web development would just add another item to this list.
+                    </p>
+                    <p>
+                        I hope you enjoy! 
+                    </p>
+                </section>
+                <div class="about-image">
+                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-photography-cover.jpg" alt="author of the page">
+                </div>
+            </main>
+        </div>
         <script src="js/glightbox.min.js"></script>
         <script type="text/javascript">
              const lightbox = GLightbox({ loop: true });
