--- a/illustrations.html
+++ b/illustrations.html
@@ -4,100 +4,116 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Photography</title>
+        <title>Illustrations</title>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/glightbox.min.css">
     </head>
     <body>
-        <header id="site-header">
-            <nav class="header-nav">
-                <h1 class="h-nav"><a href="index.html">Yannick Schulz</a></h1>
-                <ul class="nav-menu">
-                    <li class="nav-item"><a href="about.html">About</a></li>
-                    <li class="nav-item"><a href="photography.html">Photography</a></li>
-                    <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
-                </ul>
-            </nav>
-        </header>            
-        <div class="coverphoto">
-            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-illustrationCover.png" alt="coverphoto silhouette holding a camera">
-        </div>
-        <main class ="gallery-page">
-            <div class="textbox">
-                <h2>Magazines</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
+        <div class="header-offset">
+            <header id="site-header">
+                <nav class="header-nav">
+                    <h1 class="h-nav"><a href="index.html">Yannick Schulz</a></h1>
+                    <ul class="nav-menu">
+                        <li class="nav-item"><a href="about.html">About</a></li>
+                        <li class="nav-item"><a href="photography.html">Photography</a></li>
+                        <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
+                    </ul>
+                </nav>
+            </header>            
+            <div class="coverphoto">
+                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-illustrationCover.png" alt="coverphoto silhouette holding a camera">
             </div>
-            <section class="gallery-container magazine">
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-1.pdf">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-1.png" alt="magazine Formula Student December18" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-2.pdf">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-2.png" alt="magazine Formula Student January19" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-3.pdf">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-3.png" alt="magazine Formula Student March19" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-4.pdf">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-4.png" alt="magazine Formula Student April19" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-5.pdf">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-5.png" alt="magazine Formula Student August19" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-breadBaking.pdf">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-breadBaking.png" alt="magazine Formula Student August19" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item w-2">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-yearbookCover.pdf">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-yearbookCover.png" alt="magazine Formula Student August19" class="gallery-img">
-                    </a>
-                </div>
-            </section>
-            <section class="scroll-section">
-                <div class="textbox">
-                    <h2>Scientific Illustrations</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
-                </div>
-                <section class="gallery-container">
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-healthy.png" class="glightbox">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-healthy.png" alt="vena galeni healthy" class="gallery-img">
-                        </a>
+            <main class ="gallery-page content-color page-heading">
+                <div class="first-element">
+                    <div class="textbox">
+                        <h1>Illustrations</h1>
+                        <h2>Magazines</h2>
+                        <p>
+                            After I was introduced to InDesign and Scribus in my senior year in highschool, taking part as a board member and designing the yearbook, I was overwhelmed by the power of layouting tools.
+                            Who could have thought that design can be so pleasant after being forced to struggle with Word all the time.
+                            In my opinion latex should be the standard in public primary education, but I get distracted.
+                            Ever since, I have used layouting tools for everything that has to do with print or ePub even simple greeting cards and don't regret a thing.
+                        </p>
                     </div>
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-malicious.png" class="glightbox">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-malicious.png" alt="vena galeni malicious" class="gallery-img">
-                        </a>
+                    <section class="gallery-container magazine">
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-1.pdf">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-1.png" alt="magazine Formula Student December18" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-2.pdf">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-2.png" alt="magazine Formula Student January19" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-3.pdf">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-3.png" alt="magazine Formula Student March19" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-4.pdf">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-4.png" alt="magazine Formula Student April19" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-5.pdf">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-5.png" alt="magazine Formula Student August19" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-breadBaking.pdf">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-breadBaking.png" alt="magazine Formula Student August19" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item w-2">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-yearbookCover.pdf">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-yearbookCover.png" alt="magazine Formula Student August19" class="gallery-img">
+                            </a>
+                        </div>
+                    </section>
+                </div>
+                <section class="scroll-section header-offset">
+                    <div class="textbox">
+                        <h2>Scientific Illustrations</h2>
+                        <p>
+                            Using illustration tools has become very normal to me when I know what I want to do, using them in presentation, publication and fun.
+                            All the more welcome are challenging tasks when I have no idea about the details that are involved in the message that the illustration should convey.
+                            Recently my sister, doctor of radiology at the Sana Kliniken in Germany asked me to help out designing some figures to show-case the cutting-edge procedures her and her team do on their website.
+                            The department she works in is the only place that can treat thrombi and other vascular issues of stroke patients that far up in the brain.
+                            But for further information on the actual matter or any figure in particular, please find the articles on <a href="https://www.sana.de/duisburg/medizin-pflege/radiologie-und-neuroradiologie">their website.</a>
+                        </p>
                     </div>
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-trombus.png" class="glightbox">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-trombus.png" alt="trombus" class="gallery-img">
-                        </a>
-                    </div>
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-malformation.png" class="glightbox"> 
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-malformation.png" alt="malformation" class="gallery-img">
-                        </a>
-                    </div>
-                    <div class="gallery-item">
-                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-stent-3d.png" class="glightbox">
-                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-stent-3d.png" alt="stent 3d" class="gallery-img">
-                        </a>
-                    </div>
+                    <section class="gallery-container">
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-healthy.png" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-healthy.png" alt="vena galeni healthy" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-malicious.png" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-malicious.png" alt="vena galeni malicious" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-trombus.png" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-trombus.png" alt="trombus" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-malformation.png" class="glightbox"> 
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-malformation.png" alt="malformation" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-stent-3d.png" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-stent-3d.png" alt="stent 3d" class="gallery-img">
+                            </a>
+                        </div>
+                    </section>
                 </section>
-            </section>
-        </main>
+            </main>
+        </div>
         <script src="js/glightbox.min.js"></script>
         <script type="text/javascript">
              const lightbox = GLightbox({ loop: true });
