added more pictures

--- a/photography.html
+++ b/photography.html
@@ -50,6 +50,16 @@
                                 <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage2.jpg" alt="motorcycle" class="gallery-img">
                             </a>
                         </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stylized1.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stylized1.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-yasmine-shooting.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-yasmine-shooting.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
                     </section>
                 </div>
                 <section class="scroll-section">
@@ -92,6 +102,16 @@
                                 <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike6.jpg" alt="motorcycle" class="gallery-img">
                             </a>
                         </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike7.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike7.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike8.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike8.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
                     </section>
                 </section>
                 <section class="scroll-section">
@@ -113,6 +133,55 @@
                         <div class="gallery-item">
                             <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" class="glightbox">
                                 <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                    </section>
+                </section>
+                <section class="scroll-section">
+                    <div class="textbox header-offset">
+                        <h2>Miscellaneous</h2>
+                        <p>
+                            I normally don't take my entire camera bag with me on trips. 
+                            I feel, I cannot enjoy an occasion as much if I experience it through the lense.
+                            So, when I do, the photography becomes the main event for me. That is sometimes desirable and sometime it isn't. 
+                            And more often than not, those pictures I take are of private events and may include faces of friends or people I am not willing to share.
+                            But here is a selection regardless.
+                        </p>
+                    </div>
+                    <section class="gallery-container">
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stylized2.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stylized2.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-freight-station.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-freight-station.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-silhouette.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-silhouette.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-classic1.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-classic1.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS1.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS1.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS2.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS2.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS3.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-FS3.jpg" alt="motorcycle" class="gallery-img">
                             </a>
                         </div>
                     </section>
