added another photo

--- a/photography.html
+++ b/photography.html
@@ -60,6 +60,11 @@
                                 <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-yasmine-shooting.jpg" alt="motorcycle" class="gallery-img">
                             </a>
                         </div>
+                        <div class="gallery-item">
+                            <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-first-date.jpg" class="glightbox">
+                                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-first-date.jpg" alt="motorcycle" class="gallery-img">
+                            </a>
+                        </div>
                     </section>
                 </div>
                 <section class="scroll-section">
