started landing page

--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
         <title>Yannick Schulz</title>
         <link rel="stylesheet" href="css/styles.css">
     </head>
-    <body>
+    <body class="landing-body">
         <header>
-            <nav class="header-nav">
-                <h1 class="h-nav"><a href="index.html">Yannick Schulz</a></h1>
-                <ul class="nav-menu">
-                    <li class="nav-item"><a href="about.html">About</a></li>
-                    <li class="nav-item"><a href="photography.html">Photography</a></li>
-                    <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
-                </ul>
-            </nav>
         </header>
         <main>
-            <p>test paragraph</p>
-            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/auxilliary/test.png" alt="testimage">
+            <section class="video-box">
+                <video src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/video/yannick-schulz-hot-lap.mp4" autoplay muted loop class="landing-video">
+                </video>
+            </section>
+            <nav class="landing-nav">
+                <div class="landing-container">
+                    <h1 class="landingh-nav h-nav"><a href="index.html">Yannick Schulz</a></h1>
+                    <ul class="nav-menu">
+                        <li class="nav-item"><a href="about.html">About</a></li>
+                        <li class="nav-item"><a href="photography.html">Photography</a></li>
+                        <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
+                    </ul>
+                </div>
+            </nav>
         </main>
     </body>
 </html>
