--- a/photography.html
+++ b/photography.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/glightbox.min.css">
     </head>
-    <body>
+    <body class="body-page">
         <div class="header-offset">
             <header id="site-header">
                 <nav class="header-nav">
