compressed the video and quick fixed landing page nav for now

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <body class="landing-body">
         <header>
         </header>
-        <main>
+        <main class="landing-main">
             <section class="video-box">
                 <video src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/video/yannick-schulz-hot-lap.mp4" autoplay muted loop class="landing-video">
                 </video>
+                <!-- <video src="" autoplay muted loop class="landing-video">
+                </video> -->
             </section>
             <nav class="landing-nav">
                 <div class="landing-container">
