fixed some typos and added a buffer image at the landing page for slow connections

--- a/about.html
+++ b/about.html
@@ -35,11 +35,11 @@
                     <p>
                         Engineer, developer, german angliophile, hobbyist and simply a creative person. 
                         I love to indulge myself in creative work to balance the analytical load that goes hand in hand with my profession.
-                        Engineering has helped me honing my skills in this area of crafts and I certainly believe the creativity has done the same to my problem solving skills. 
-                        And although web 2.0 (or 3.0) offers great ways to express yourself I have never been a fan of the social media aspects that come with them.
+                        Engineering has helped me hone my skills in this area of crafts and I certainly believe the creativity has done the same to my problem solving skills. 
+                        And although web 2.0 (or 3.0) offers great ways to express yourself, I have never been a fan of the social media aspects that come with them.
                         Hence, my own website had to become reality.
                         I want to share, but mostly archive projects, learnings and ideas in a convenient way that suits them and myself.
-                        And while doing so, trying myself at some web development would just add another item to this list.
+                        And while doing so, trying myself at some web development, would just add another item to this list.
                     </p>
                     <p>
                         I hope you enjoy! 
