--- a/illustrations.html
+++ b/illustrations.html
@@ -32,7 +32,7 @@
                             After I was introduced to InDesign and Scribus in my senior year in highschool, taking part as a board member and designing the yearbook, I was overwhelmed by the power of layouting tools.
                             Who could have thought that design can be so pleasant after being forced to struggle with Word all the time.
                             In my opinion latex should be the standard in public primary education, but I get distracted.
-                            Ever since, I have used layouting tools for everything that has to do with print or ePub even simple greeting cards and don't regret a thing.
+                            Ever since, I have used layouting tools for everything that has to do with print or ePub; even simple greeting cards and I don't regret a thing.
                         </p>
                     </div>
                     <section class="gallery-container magazine">
@@ -79,9 +79,10 @@
                         <p>
                             Using illustration tools has become very normal to me when I know what I want to do, using them in presentation, publication and fun.
                             All the more welcome are challenging tasks when I have no idea about the details that are involved in the message that the illustration should convey.
-                            Recently my sister, doctor of radiology at the Sana Kliniken in Germany asked me to help out designing some figures to show-case the cutting-edge procedures her and her team do on their website.
+                            Recently, my sister, doctor of radiology at the Sana Kliniken in Germany, asked me to help out designing some figures to show-case the cutting-edge procedures her and her team are doing on their website.
                             The department she works in is the only place that can treat thrombi and other vascular issues of stroke patients that far up in the brain.
                             But for further information on the actual matter or any figure in particular, please find the articles on <a href="https://www.sana.de/duisburg/medizin-pflege/radiologie-und-neuroradiologie">their website.</a>
+                            (It is in german though!)
                         </p>
                     </div>
                     <section class="gallery-container">
