--- a/photography.html
+++ b/photography.html
@@ -126,7 +126,7 @@
                             When I decided to have a skalpel engraved for the medical doctorate of my sister, I was asked for a photo of the finished piece by the company for their instagram profile. 
                             Apparently, this was a very unique request and they would love to display it. 
                             Since I was always intrigued by the perfectionism and attention to detail in product photography, I took this opportunity to try myself.
-                            With a makeshift light box of a turned over table and white bed linen I learned the difficulty of capturing shiny metal surfaces the way you want.
+                            With a makeshift light box of a turned over table and white bed linen, I learned the difficulty of capturing shiny metal surfaces the way you want to. Let me tell you, it's tough!
                         </p>
                     </div>
                     <section class="gallery-container">
